Fix java-9-isms, change BWC version